Use lookup.defineHiddenClass() instead of Unsafe.defineAnonymousClass if Java 15+